// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home renders MovieDetail correctly with movieId query 1`] = `
<styled.div
  className="homePage-Wrapper"
>
  <MovieDetail
    movieId="1"
  />
  <Memo(Content) />
  <Footer />
</styled.div>
`;

exports[`Home renders Search correctly when url without movieId query 1`] = `
<styled.div
  className="homePage-Wrapper"
>
  <Memo(Search) />
  <Memo(Content) />
  <Footer />
</styled.div>
`;
